# people-follower

./: README.md
detector/: CMakeLists.txt  package.xml
detector/launch/: node_launcher.launch  odom_sub_launcher.launch  pcl_tracker_launcher.launch  sub_launcher.launch
detector/src/: detection_node.py  odom_sub.py  pc_tracker.py  pcltest.cpp  printer.py  publisher.py  subscriber.py  testPub.cpp  testSub.cpp  testing.py
detector/tflite1/: TFLite_detection_webcam.py
turtlebot_follower2/: CMakeLists.txt  README.md  c2.txt  package.xml
turtlebot_follower2/cfg/: Follower2.cfg
turtlebot_follower2/launch/: follower.launch  follower2.launch
turtlebot_follower2/plugins/: nodelets.xml
turtlebot_follower2/src/: follower2.cpp  sound_sub.py
